[package]
name = "llama_backend"
version = "0.1.0"
edition = "2021"
description = "5"
repository = "https://github.com/Demopans/RustLLaMABackend"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
tch = {version = "0.13.0"}